src/objects/Item_Pool__c.object
<CustomObject>
    <description>itempool table record, creates a pool of tickets in the ticket table. These tickets of similar kind wthin a class of item type. These pools of a single ticket class can be sold for different prices at different times e.g. Early bird,Regular, Late etc. The pricing is available in item table.for parent_addon_id 
refer to http://mikehillyer.com/articles/managing-hierarchical-data-in-mysql/</description>
    <fields>
        <fullName>Addon_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Addon Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Addon_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addon Parent</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipName>Item_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Badgable__c</fullName>
        <label>Badgable</label>
        <picklist>
            <picklistValues>
                <fullName>B - Badge</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>N - No Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Mark on the badge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Badge_Label__c</fullName>
        <label>Badge Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Item_Pools</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Count__c</fullName>
        <label>Item Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Pool_Name__c</fullName>
        <label>Item Pool Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Type</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>Item_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Flag__c</fullName>
        <label>Package Flag</label>
        <picklist>
            <picklistValues>
                <fullName>I - Individual Item pool</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>P - Package item pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Addon Item pool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Row_End__c</fullName>
        <label>Row End</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Start__c</fullName>
        <label>Row Start</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Settings__c</fullName>
        <label>Ticket_Settings</label>
        <picklist>
            <picklistValues>
                <fullName>Collect info from Buyers only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Collect info from All Attendees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not collect Attendee info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track</label>
        <referenceTo>BLN_Track__c</referenceTo>
        <relationshipName>Item_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_End__c</fullName>
        <label>Unit End</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Start__c</fullName>
        <label>Unit Start</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_End__c</fullName>
        <label>Zone End</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Start__c</fullName>
        <label>Zone Start</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueNumber__c</fullName>
        <label>uniqueNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BLN Item Pool</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Pool_Name__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Item_Count__c</columns>
        <columns>Addon_Parent__c</columns>
        <columns>Addon_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Item Pool Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Item Pools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Item_Pool_Quantity_Count</fullName>
        <active>false</active>
        <errorConditionFormula>OR( Item_Count__c &lt;=  0 , ISNULL(Item_Count__c))</errorConditionFormula>
        <errorDisplayField>Item_Count__c</errorDisplayField>
        <errorMessage>Please Enter Item Pool Quantity</errorMessage>
    </validationRules>
</CustomObject>